Break out list items when they are at the start of a editable table cell

We need to add a new case for breaking out empy list items when they are
at the start of an editable area. Since list items can be also inside
table cells, we need to consider this kind of elements as well.

Bug: 731621
Change-Id: If2cfc2bd926dc30004e92b18712d8167db7241fe