third_party/WebKit/LayoutTests/external/wpt/editing/data/delete-list-items-in-table-cells.js
@@ -1,0 +1,24 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+// For documentation of the format, see README in this directory.
+var browserTests = [
+['<div contenteditable="true"><table><tr><td><ol><li>a</li><li>{}</li></ol></td><td>b</td></tr></table></div>',
+    [["delete",""]],
+    '<div contenteditable="true"><table><tbody><tr><td><ol><li>a</li></ol></td><td>b</td></tr></tbody></table></div>',
+    [true],
+    {"delete":[false,false,"",false,false,""]}],
+['<div contenteditable="true"><table><tr><td><ul><li>a</li><li>{}</li></ul></td><td>b</td></tr></table></div>',
+    [["delete",""]],
+    '<div contenteditable="true"><table><tbody><tr><td><ul><li>a</li></ul></td><td>b</td></tr></tbody></table></div>',
+    [true],
+    {"delete":[false,false,"",false,false,""]}],
+['<div contenteditable="true"><table><tr><td><ol><li>{}</li></ol></td></tr></table></div></table></div>',
+    [["delete",""]],
+    '<div contenteditable="true"><table><tbody><tr><td><div><br></div></td></tr></tbody></table></div>',
+    [true],
+    {"delete":[false,false,"",false,false,""]}],
+['<div contenteditable="true"><table><tr><td><ul><li>{}</li></ul></td></tr></table></div></table></div>',
+    [["delete",""]],
+    '<div contenteditable="true"><table><tbody><tr><td><div><br></div></td></tr></tbody></table></div>',
+    [true],
+    {"delete":[false,false,"",false,false,""]}],
+]
